--- a/about.qmd
+++ b/about.qmd
@@ -1,18 +1,11 @@
 ---
-title: "About"
-image: profile.jpg
-about:
-  template: jolla
-  links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
-    - icon: linkedin
-      text: LinkedIn
-      href: https://linkedin.com
-    - icon: github
-      text: Github
-      href: https://github.com
+title: "Qui sommes-nous ?"
 ---
 
-About this blog aaa
+Les formations et prestations Data PMSI sont assurées par la société DATAMIS.  
+
+Mentions légales :  
+DATAMIS  
+N° SIRET : 843 777 509 00012  
+Coordonnées : 31, avenue de Ségur 75007 PARIS  
+[Nous contacter](https://www.lespmsi.com/contact-pmsisoft){target="_blank"}
