--- a/formations/pmsi_ssr_requete.qmd
+++ b/formations/pmsi_ssr_requete.qmd
@@ -1,7 +1,7 @@
 ---
-title: "PMSI SSR Requête"
+title: "<span style='font-family: Boska; font-size: 2.75rem; font-weight: 800;'>Formation Requêtes SSR</span>"
 lang: fr
 ---
 
-# A venir
+## A venir
 
