bulletin_pre_inscription

--- a/formations/pmsi_mco_requete.qmd
+++ b/formations/pmsi_mco_requete.qmd
@@ -61,11 +61,9 @@ Le tarif est de 720 € (en exonération de TVA, dont 80€ de certification Qua
 
 ## Inscription
 
-[Téléchager le bulletin de pré-inscription](https://www.lespmsi.com/bon_de_commande_formation_requetes_mco.pdf)  
+[Télécharger le bulletin de pré-inscription](https://www.lespmsi.com/bon_de_commande_formation_requetes_mco.pdf)  
 
 A réception du bulletin de pré-inscription renseignée et signée, nous vous enverrons la convention de formation, les conditions générales de vente (CGV) et le règlement intérieur de la formation.  
-
-Règlement à l'issue de la formation.  
 
 La formation comprend de 3 à 10 participants.  
 
@@ -76,3 +74,5 @@ La formation est opérée par l'organisme de formation [FormaTIM](https://www.fo
 Le label QUALIOPI certifie la qualité des formations proposées et valide la prise en charge par les financeurs.  
 
 La certification qualité a été délivrée à FormaTIM au titre de la catégorie d’action : ACTIONS DE FORMATION  
+
+Règlement à l'issue de la formation.  
