--- a/formations/pmsi_mco_requete.qmd
+++ b/formations/pmsi_mco_requete.qmd
@@ -75,4 +75,6 @@ Le label QUALIOPI certifie la qualité des formations proposées et valide la pr
 
 La certification qualité a été délivrée à FormaTIM au titre de la catégorie d’action : ACTIONS DE FORMATION  
 
+Nous signaler tout problème de handicap qui nécessiterait une adaptation lors des sessions.  
+
 Règlement à l'issue de la formation.  
