--- a/formations/pmsi_mco_requete.qmd
+++ b/formations/pmsi_mco_requete.qmd
@@ -61,9 +61,9 @@ Le tarif est de 720 € (en exonération de TVA, dont 80€ de certification Qua
 
 ## Inscription
 
-[Télécharger le bulletin de pré-inscription](https://www.lespmsi.com/bon_de_commande_formation_requetes_mco.pdf)  
+[Remplir le formulaire de pré-inscription](https://www.lespmsi.com/formation_requetes_mco_mars_2023){target="_blank"}  
 
-A réception du bulletin de pré-inscription renseignée et signée, nous vous enverrons la convention de formation, les conditions générales de vente (CGV) et le règlement intérieur de la formation.  
+A réception de votre pré-inscription [^1], nous vous contacterons pour échanger avec vous, valider votre inscription et vous communiquer la convention de formation, les conditions générales de vente (CGV) et le règlement intérieur de la formation.  
 
 La formation comprend de 3 à 10 participants.  
 
@@ -78,3 +78,5 @@ La certification qualité a été délivrée à FormaTIM au titre de la catégor
 Nous signaler tout problème de handicap qui nécessiterait une adaptation lors des sessions.  
 
 Règlement à l'issue de la formation.  
+
+[^1]: une pré-inscription est une demande d'information qui n'engage contractuellement ni vous ni votre établissement.  
