--- a/index.qmd
+++ b/index.qmd
@@ -8,7 +8,7 @@ lang: fr
 ::: {.callout-note}
 ## Prochaines formations  
 ✍️ [Requêtes MCO sur 2 journées](formations/pmsi_mco_requete.qmd)\
-🗓️ **vendredi 24 mars et vendredi 31 mars 2023**\
+🗓️ **vendredi 09 juin et vendredi 16 juin 2023**\
 ⏰ 09:00 - 17:00\
 🏨 En ligne  
 [Liste des requêtes MCO codées dans la formation](formations/pmsi_mco_requete_exemples.html)
