--- a/planning.qmd
+++ b/planning.qmd
@@ -3,8 +3,12 @@ title: "Planning des formations Date PMSI avec R"
 lang: fr
 ---
 
+## Le PMSI avec R  
+
+[vendredi 13 octobre 2023](formations/pmsi_initiation.qmd)  
+
 ## Requêtes MCO  
 
-Journée 1 : [vendredi 09 juin 2023](formations/pmsi_mco_requete.qmd)  
-Journée 2 : [vendredi 16 juin 2023](formations/pmsi_mco_requete.qmd)
+Journée 1 : [vendredi 17 novembre 2023](formations/pmsi_mco_requete.qmd)  
+Journée 2 : [vendredi 24 novembre 2023](formations/pmsi_mco_requete.qmd)
 
