--- a/scripts_smr.qmd
+++ b/scripts_smr.qmd
@@ -1,5 +1,5 @@
 ---
-title: "<span style='font-family: Boska; font-size: 2.75rem; font-weight: 800;'>Scripts R PMSI SMR</span>"
+title: "<span style='font-family: Boska; font-size: 2.75rem; font-weight: 800;'>Scripts SMR R</span>"
 lang: fr
 listing:
   type: default
@@ -16,5 +16,5 @@ toc: false
 
 Il est conseillé de lire le [Guide des scripts](guide_post.qmd) et les [Pré-requis R](base_R.qmd) en préambule à la lecture et l'exploitation des scripts.
 
-## Liste des scripts SMR  
+## Liste des scripts SMR R  
 
